--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/irr-calculator/">IRR Calculator</a>
-</nav>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Project Hub</title>
+    <style>
+        /* This is CSS - it makes the page look pretty */
+        body { font-family: sans-serif; text-align: center; padding: 50px; }
+        nav { background: #333; padding: 10px; }
+        nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
+        nav a:hover { color: #00d1b2; }
+    </style>
+</head>
+<body>
+
+    <nav>
+        <a href="/">Home</a>
+        <a href="/irr-calculator/">IRR Calculator</a>
+    </nav>
+
+    <h1>Welcome to My Tool Hub</h1>
+    <p>Select a tool from the menu above to get started.</p>
+
+</body>
+</html>
