--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
-    <nav>
-        <a href="/">Home</a>
-        <a href="/irr-calculator/">IRR Calculator</a>
+  <nav>
+  <a href="/">Home</a>
+  <a href="/irr-calculator/">IRR Calculator</a>
+  <a href="/luminate/">Album Analysis</a> </nav>
     </nav>
 
     <h1>Welcome to My Tool Hub</h1>
