--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="/luminate/">Album Analysis</a> </nav>
     </nav>
 
-    <h1>Welcome to My Tool Hub</h1>
+    <h1>Central Park Media HOldings</h1>
     <p>Select a tool from the menu above to get started.</p>
 
 </body>
