Update link text for Album Analysis section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
   <a href="/">Home</a>
   <a href="/irr-calculator/">IRR Calculator</a>
-  <a href="/luminate/">Album Analysis</a> </nav>
+  <a href="/luminate/">Luminate Album Analysis</a> </nav>
     </nav>
 
     <h1>Central Park Media HOldings</h1>
