Fix typo in Central Park Media Holdings header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <a href="/luminate/">Luminate Album Analysis</a> </nav>
     </nav>
 
-    <h1>Central Park Media HOldings</h1>
+    <h1>Central Park Media Holdings</h1>
     <p>Select a tool from the menu above to get started.</p>
 
 </body>
