--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <nav>
   <a href="/">Home</a>
   <a href="/irr-calculator/">IRR Calculator</a>
-  <a href="/luminate/">Luminate Album Analysis</a> </nav>
+  <a href="/luminate/">Luminate Album Analysis</a>
+  <a href="/eisenhower/">Eisenhower</a></nav>
     </nav>
 
     <h1>Central Park Media Holdings</h1>
