--- a/irr-calculator/index.html
+++ b/irr-calculator/index.html
@@ -2564,33 +2564,17 @@
                 els.clearBtn.addEventListener("click", () => {
                     if (!confirm("Are you sure you want to clear all primary inputs?")) return;
 
-                    // Reset Primary Inputs to Defaults
-                    const defaults = {
-                        "project-name": "",
-                        "year1-cf": "5000000",
-                        "budget-100": "25000",
-                        "budget-50": "25000",
-                        "phys-mfg-cost": "0",
-                        "phys-multiple": "0"
-                    };
-
-                    Object.entries(defaults).forEach(([id, val]) => {
+                    // Clear Text/Money Inputs
+                    ["project-name", "year1-cf", "budget-100", "budget-50", "phys-mfg-cost", "phys-multiple"].forEach(id => {
                         const el = document.getElementById(id);
                         if (el) {
-                            el.value = val;
-                            // money fields should re-format on blur
-                            if (el.classList && el.classList.contains("irr-input-money")) {
-                                el.dispatchEvent(new Event("blur"));
-                            } else {
-                                el.dispatchEvent(new Event("input"));
-                            }
+                            el.value = "";
+                            el.dispatchEvent(new Event("input"));
                         }
                     });
 
-                    // Reset Date to Default (Today + 90 days)
-                    const d = new Date();
-                    d.setDate(d.getDate() + 90);
-                    const today = d.toISOString().split('T')[0];
+                    // Reset Date to Today
+                    const today = new Date().toISOString().split('T')[0];
                     if (els.streetDate) {
                         els.streetDate.value = today;
                     }
@@ -2609,7 +2593,6 @@
             function getPersistData() {
                 const data = {};
                 for (const [key, el] of Object.entries(els)) {
-                    if (key === "projectName") continue; // keep Project Name blank by default
                     if (el && (el.tagName === "INPUT" || el.tagName === "TEXTAREA")) {
                         data[key] = el.value;
                     }
@@ -2625,7 +2608,6 @@
             function restoreFromData(data) {
                 if (!data) return;
                 for (const [key, val] of Object.entries(data)) {
-                    if (key === "projectName") continue; // keep Project Name blank by default
                     const el = els[key];
                     if (el && (el.tagName === "INPUT" || el.tagName === "TEXTAREA")) {
                         el.value = val;
@@ -2651,16 +2633,10 @@
 
             // Initial run with defaults
             if (els.streetDate && !els.streetDate.value) {
-                const d = new Date();
-                d.setDate(d.getDate() + 90);
-                els.streetDate.value = d.toLocaleDateString('en-CA');
+                els.streetDate.value = new Date().toLocaleDateString('en-CA');
             }
 
             initPersistence();
-
-            if (els.projectName) {
-                els.projectName.value = "";
-            }
 
             // Attach auto-save to input events
             appEl.addEventListener("input", (e) => {
