--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 
         <nav id="navColumn">
             <a href="/irr-calculator/" class="nav-link">IRR Calculator</a>
+            <a href="/stock/" class="nav-link">Stock</a>
             <a href="/luminate/" class="nav-link">Luminate Album Analysis</a>
             <a href="/eisenhower/" class="nav-link">Eisenhower</a>
         </nav>
