Update button text and navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
 
         <div id="passwordArea">
-            <button class="pass-toggle" id="passToggle">Access</button>
+            <button class="pass-toggle" id="passToggle">Access Toolkit</button>
             <div class="input-wrap" id="inputWrap">
                 <input type="password" id="passInput" placeholder="Password">
                 <button class="pass-toggle" style="font-size:12px; padding: 4px 10px;" id="unlockBtn">Unlock</button>
@@ -191,8 +191,10 @@
 
         <nav id="navColumn">
             <a href="/irr-calculator/" class="nav-link">IRR Calculator</a>
-            <a href="/luminate/" class="nav-link">Luminate Album Analysis</a>
-            <a href="/eisenhower/" class="nav-link">Eisenhower</a>
+            <a href="/luminate/" class="nav-link">Luminate Analysis</a>
+            <a href="/stock/" class="nav-link">Stock Mgmt</a>
+            <a href="/physical-forecast/" class="nav-link">Physical Forecast</a>
+            <a href="/eisenhower/" class="nav-link">Eisenhower Matrix</a>
         </nav>
     </div>
 
