Update header to indicate construction status

--- a/stock/index.html
+++ b/stock/index.html
@@ -23,7 +23,8 @@
 
         <header class="header">
             <div>
-                <h1>Stock Management</h1>
+                <h1>Stock Management - UNDER CONSTRUCTION 🏗️</h1>
+                <h2>🏗️ UNDER CONSTRUCTION 🏗️ VELOCITY AND MO SUPPLY UNVERIFIED 🏗️</h2>
                 <p>Live inventory tracking from Head of Production.</p>
             </div>
             <div class="header-controls">
