--- a/index.html
+++ b/index.html
@@ -2,266 +2,284 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Central Park Media Holdings</title>
-    <style>
-        :root {
-            --bg-color: #0a0a0a;
-            --text-color: #e9f1ff;
-            --accent-color: #e9f1ff;
-            --glow-color: rgba(233, 241, 255, 0.2);
-            --font-stack: "Courier Prime", "Courier New", ui-monospace, monospace;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Central Park Media Holdings</title>
 
-        body {
-            background-color: var(--bg-color);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            color: var(--text-color);
-            font-family: var(--font-stack);
-            overflow: hidden;
-        }
+  <style>
+    /* ----------------------------------------------------------
+      DOS FONT SETUP
+      1) Download “Perfect DOS VGA 437”
+      2) Convert to WOFF2 (or download WOFF/WOFF2 if you find one)
+      3) Put it here: /fonts/PerfectDOSVGA437.woff2 (relative to this HTML)
+    ---------------------------------------------------------- */
+    @font-face {
+      font-family: "Perfect DOS VGA 437";
+      src: url("./fonts/PerfectDOSVGA437.woff2") format("woff2");
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
 
-        .cpmh-hero {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 40px;
-            padding: 20px;
-            width: 100%;
-            max-width: 900px;
-        }
+    :root {
+      /* DOS-ish palette */
+      --bg-color: #000000;
+      --text-color: #33ff33;    /* bright DOS green */
+      --accent-color: #33ff33;
+      --glow-color: rgba(51, 255, 51, 0.18);
 
-        /* Typing Effect */
-        .cpmh-tty {
-            font-size: clamp(18px, 4vw, 32px);
-            line-height: 1.25;
-            letter-spacing: 0.04em;
-            display: flex;
-            align-items: baseline;
-            white-space: nowrap;
-            text-shadow: 0 0 8px var(--glow-color);
-            min-height: 1.5em;
-        }
+      --font-stack: "Perfect DOS VGA 437", ui-monospace, SFMono-Regular, Menlo, Monaco,
+        Consolas, "Liberation Mono", "Courier New", monospace;
+    }
 
-        .cpmh-cursor {
-            width: 0.7ch;
-            height: 1.05em;
-            margin-left: 0.15ch;
-            transform: translateY(0.12em);
-            background: currentColor;
-            animation: cpmh-blink 1s steps(1, end) infinite;
-        }
+    body {
+      background-color: var(--bg-color);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      color: var(--text-color);
+      font-family: var(--font-stack);
+      overflow: hidden;
 
-        @keyframes cpmh-blink {
-            50% {
-                opacity: 0;
-            }
-        }
+      /* Make it feel more like pixel text */
+      -webkit-font-smoothing: none;
+      -moz-osx-font-smoothing: grayscale;
+      text-rendering: optimizeSpeed;
+    }
 
-        /* Password Section */
-        #passwordArea {
-            opacity: 0;
-            transition: opacity 1s ease-in-out;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 15px;
-        }
+    .cpmh-hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 36px;
+      padding: 20px;
+      width: 100%;
+      max-width: 900px;
+    }
 
-        #passwordArea.visible {
-            opacity: 1;
-        }
+    /* Typing Effect */
+    .cpmh-tty {
+      font-size: clamp(18px, 4vw, 32px);
+      line-height: 1.05;       /* tighter = more DOS */
+      letter-spacing: 0;       /* bitmap fonts look best without tracking */
+      display: flex;
+      align-items: baseline;
+      white-space: nowrap;
+      text-shadow: 0 0 10px var(--glow-color);
+      min-height: 1.5em;
+    }
 
-        .pass-toggle {
-            background: transparent;
-            border: 1px solid var(--text-color);
-            color: var(--text-color);
-            padding: 8px 16px;
-            font-family: inherit;
-            cursor: pointer;
-            font-size: 14px;
-            letter-spacing: 0.1em;
-            transition: all 0.3s ease;
-            text-transform: uppercase;
-        }
+    .cpmh-cursor {
+      width: 0.7ch;
+      height: 1.05em;
+      margin-left: 0.15ch;
+      transform: translateY(0.10em);
+      background: currentColor;
+      animation: cpmh-blink 0.9s steps(1, end) infinite; /* slightly snappier blink */
+      box-shadow: 0 0 10px var(--glow-color);
+    }
 
-        .pass-toggle:hover {
-            background: var(--text-color);
-            color: var(--bg-color);
-            box-shadow: 0 0 15px var(--glow-color);
-        }
+    @keyframes cpmh-blink {
+      50% { opacity: 0; }
+    }
 
-        .input-wrap {
-            height: 0;
-            overflow: hidden;
-            transition: height 0.4s ease-out, opacity 0.3s ease;
-            display: flex;
-            gap: 10px;
-            opacity: 0;
-        }
+    /* Password Section */
+    #passwordArea {
+      opacity: 0;
+      transition: opacity 0.9s ease-in-out;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 14px;
+    }
 
-        .input-wrap.open {
-            height: 40px;
-            opacity: 1;
-        }
+    #passwordArea.visible { opacity: 1; }
 
-        input[type="password"] {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(233, 241, 255, 0.3);
-            color: var(--text-color);
-            padding: 5px 12px;
-            font-family: inherit;
-            outline: none;
-            width: 140px;
-            transition: border-color 0.3s ease;
-        }
+    .pass-toggle {
+      background: transparent;
+      border: 1px solid color-mix(in srgb, var(--text-color) 75%, transparent);
+      color: var(--text-color);
+      padding: 8px 16px;
+      font-family: inherit;
+      cursor: pointer;
+      font-size: 14px;
+      letter-spacing: 0.08em;
+      transition: all 0.2s ease;
+      text-transform: uppercase;
+      text-shadow: 0 0 8px var(--glow-color);
+    }
 
-        input[type="password"]:focus {
-            border-color: var(--text-color);
-        }
+    .pass-toggle:hover {
+      background: var(--text-color);
+      color: var(--bg-color);
+      box-shadow: 0 0 18px var(--glow-color);
+    }
 
-        /* Navigation Menu */
-        #navColumn {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-            display: none;
-            flex-direction: column;
-            gap: 12px;
-            margin-top: 20px;
-            padding: 20px;
-            border-left: 1px solid rgba(233, 241, 255, 0.2);
-        }
+    .input-wrap {
+      height: 0;
+      overflow: hidden;
+      transition: height 0.35s ease-out, opacity 0.25s ease;
+      display: flex;
+      gap: 10px;
+      opacity: 0;
+    }
 
-        #navColumn.revealed {
-            opacity: 1;
-            transform: translateY(0);
-            display: flex;
-        }
+    .input-wrap.open {
+      height: 40px;
+      opacity: 1;
+    }
 
-        .nav-link {
-            color: var(--text-color);
-            text-decoration: none;
-            font-size: 16px;
-            letter-spacing: 0.05em;
-            padding: 4px 12px;
-            transition: all 0.3s ease;
-            opacity: 0.7;
-        }
+    input[type="password"] {
+      background: rgba(51, 255, 51, 0.06);
+      border: 1px solid rgba(51, 255, 51, 0.35);
+      color: var(--text-color);
+      padding: 6px 12px;
+      font-family: inherit;
+      outline: none;
+      width: 160px;
+      transition: border-color 0.2s ease, box-shadow 0.2s ease;
+      text-shadow: 0 0 8px var(--glow-color);
+    }
 
-        .nav-link:hover {
-            opacity: 1;
-            padding-left: 18px;
-            text-shadow: 0 0 8px var(--glow-color);
-        }
+    input[type="password"]:focus {
+      border-color: var(--text-color);
+      box-shadow: 0 0 14px var(--glow-color);
+    }
 
-        .nav-link::before {
-            content: "> ";
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
+    /* Navigation Menu */
+    #navColumn {
+      opacity: 0;
+      transform: translateY(16px);
+      transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+      display: none;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 18px;
+      padding: 18px 20px;
+      border-left: 1px solid rgba(51, 255, 51, 0.25);
+    }
 
-        .nav-link:hover::before {
-            opacity: 1;
-        }
-    </style>
+    #navColumn.revealed {
+      opacity: 1;
+      transform: translateY(0);
+      display: flex;
+    }
+
+    .nav-link {
+      color: var(--text-color);
+      text-decoration: none;
+      font-size: 16px;
+      letter-spacing: 0.02em;
+      padding: 4px 12px;
+      transition: all 0.2s ease;
+      opacity: 0.8;
+      text-shadow: 0 0 8px var(--glow-color);
+    }
+
+    .nav-link:hover {
+      opacity: 1;
+      padding-left: 18px;
+      text-shadow: 0 0 12px var(--glow-color);
+    }
+
+    .nav-link::before {
+      content: "> ";
+      opacity: 0;
+      transition: opacity 0.2s ease;
+    }
+
+    .nav-link:hover::before { opacity: 1; }
+  </style>
 </head>
 
 <body>
-
-    <div class="cpmh-hero">
-        <div class="cpmh-tty">
-            <span id="cpmhText"></span><span class="cpmh-cursor" aria-hidden="true"></span>
-        </div>
-
-        <div id="passwordArea">
-            <button class="pass-toggle" id="passToggle">Access Toolkit</button>
-            <div class="input-wrap" id="inputWrap">
-                <input type="password" id="passInput" placeholder="Password">
-                <button class="pass-toggle" style="font-size:12px; padding: 4px 10px;" id="unlockBtn">Unlock</button>
-            </div>
-        </div>
-
-        <nav id="navColumn">
-            <a href="/irr-calculator/" class="nav-link">IRR Calculator</a>
-            <a href="/luminate/" class="nav-link">Luminate Analysis</a>
-            <a href="/stock/" class="nav-link">Stock Mgmt</a>
-            <a href="/physical-forecast/" class="nav-link">Physical Forecast</a>
-            <a href="/eisenhower/" class="nav-link">Eisenhower Matrix</a>
-        </nav>
+  <div class="cpmh-hero">
+    <div class="cpmh-tty">
+      <span id="cpmhText"></span><span class="cpmh-cursor" aria-hidden="true"></span>
     </div>
 
-    <script>
-        (function () {
-            const textEl = document.getElementById("cpmhText");
-            const passArea = document.getElementById("passwordArea");
-            const passToggle = document.getElementById("passToggle");
-            const inputWrap = document.getElementById("inputWrap");
-            const passInput = document.getElementById("passInput");
-            const unlockBtn = document.getElementById("unlockBtn");
-            const navColumn = document.getElementById("navColumn");
+    <div id="passwordArea">
+      <button class="pass-toggle" id="passToggle">Access Toolkit</button>
+      <div class="input-wrap" id="inputWrap">
+        <input type="password" id="passInput" placeholder="Password" />
+        <button class="pass-toggle" style="font-size:12px; padding: 4px 10px;" id="unlockBtn">Unlock</button>
+      </div>
+    </div>
 
-            const TEXT = "Central Park Media Holdings";
-            const PASSWORD = "cpmh";
+    <nav id="navColumn">
+      <a href="/irr-calculator/" class="nav-link">IRR Calculator</a>
+      <a href="/luminate/" class="nav-link">Luminate Analysis</a>
+      <a href="/stock/" class="nav-link">Stock Mgmt</a>
+      <a href="/physical-forecast/" class="nav-link">Physical Forecast</a>
+      <a href="/eisenhower/" class="nav-link">Eisenhower Matrix</a>
+    </nav>
+  </div>
 
-            // Typing Logic
-            function startTyping() {
-                let i = 0;
-                const minDelay = 80;
-                const maxDelay = 150;
-                const randDelay = () => Math.floor(minDelay + Math.random() * (maxDelay - minDelay));
+  <script>
+    (function () {
+      const textEl = document.getElementById("cpmhText");
+      const passArea = document.getElementById("passwordArea");
+      const passToggle = document.getElementById("passToggle");
+      const inputWrap = document.getElementById("inputWrap");
+      const passInput = document.getElementById("passInput");
+      const unlockBtn = document.getElementById("unlockBtn");
+      const navColumn = document.getElementById("navColumn");
 
-                function tick() {
-                    textEl.textContent = TEXT.slice(0, i++);
-                    if (i <= TEXT.length) {
-                        setTimeout(tick, randDelay());
-                    } else {
-                        setTimeout(() => passArea.classList.add("visible"), 800);
-                    }
-                }
-                tick();
-            }
+      const TEXT = "Central Park Media Holdings";
+      const PASSWORD = "cpmh";
 
-            // Password Toggle Logic
-            passToggle.addEventListener("click", () => {
-                inputWrap.classList.toggle("open");
-                if (inputWrap.classList.contains("open")) {
-                    passInput.focus();
-                }
-            });
+      // Typing Logic (slightly faster than before)
+      function startTyping() {
+        let i = 0;
 
-            // Unlock Logic
-            function attemptUnlock() {
-                if (passInput.value.toLowerCase() === PASSWORD) {
-                    passArea.style.display = "none";
-                    navColumn.style.display = "flex";
-                    // Request animation frame to ensure display:flex is applied before animation
-                    requestAnimationFrame(() => {
-                        navColumn.classList.add("revealed");
-                    });
-                } else {
-                    passInput.style.borderColor = "#ff4d4d";
-                    setTimeout(() => passInput.style.borderColor = "", 1000);
-                    passInput.value = "";
-                }
-            }
+        // was 80–150ms; now faster:
+        const minDelay = 55;
+        const maxDelay = 110;
+        const randDelay = () => Math.floor(minDelay + Math.random() * (maxDelay - minDelay));
 
-            unlockBtn.addEventListener("click", attemptUnlock);
-            passInput.addEventListener("keypress", (e) => {
-                if (e.key === "Enter") attemptUnlock();
-            });
+        function tick() {
+          textEl.textContent = TEXT.slice(0, i++);
+          if (i <= TEXT.length) {
+            setTimeout(tick, randDelay());
+          } else {
+            setTimeout(() => passArea.classList.add("visible"), 650); // a bit faster reveal too
+          }
+        }
+        tick();
+      }
 
-            // Startup
-            setTimeout(startTyping, 500);
-        })();
-    </script>
+      // Password Toggle Logic
+      passToggle.addEventListener("click", () => {
+        inputWrap.classList.toggle("open");
+        if (inputWrap.classList.contains("open")) passInput.focus();
+      });
+
+      // Unlock Logic
+      function attemptUnlock() {
+        if (passInput.value.toLowerCase() === PASSWORD) {
+          passArea.style.display = "none";
+          navColumn.style.display = "flex";
+          requestAnimationFrame(() => navColumn.classList.add("revealed"));
+        } else {
+          passInput.style.borderColor = "#ff4d4d";
+          setTimeout(() => passInput.style.borderColor = "", 800);
+          passInput.value = "";
+        }
+      }
+
+      unlockBtn.addEventListener("click", attemptUnlock);
+      passInput.addEventListener("keypress", (e) => {
+        if (e.key === "Enter") attemptUnlock();
+      });
+
+      // Startup
+      setTimeout(startTyping, 450);
+    })();
+  </script>
 </body>
 
 </html>
