Refactor CSS styles for better responsiveness

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       min-height: 100vh;
       color: var(--text-color);
       font-family: var(--font-stack);
-      overflow: hidden;
+
+      /* Mobile fix: allow vertical scroll if needed, hide horizontal */
+      overflow-x: hidden;
+      overflow-y: auto;
 
       /* bitmap-friendly */
       -webkit-font-smoothing: none;
@@ -53,35 +56,43 @@
       flex-direction: column;
       align-items: center;
       gap: 36px;
-      padding: 20px;
+      padding: 40px 20px;
       width: 100%;
+      box-sizing: border-box;
       max-width: 900px;
     }
 
     /* Typing Effect */
     .cpmh-tty {
-      font-size: clamp(18px, 4vw, 32px);
-      line-height: 1.05;
+      font-size: clamp(16px, 6vw, 32px);
+      line-height: 1.2;
       letter-spacing: 0;
       display: flex;
-      align-items: baseline;
-      white-space: nowrap;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      text-align: center;
+      white-space: normal;
       text-shadow: 0 0 10px var(--glow-color);
       min-height: 1.5em;
+      width: 100%;
     }
 
     .cpmh-cursor {
+      display: inline-block;
       width: 0.7ch;
       height: 1.05em;
       margin-left: 0.15ch;
-      transform: translateY(0.1em);
       background: currentColor;
       animation: cpmh-blink 0.9s steps(1, end) infinite;
       box-shadow: 0 0 10px var(--glow-color);
+      vertical-align: middle;
     }
 
     @keyframes cpmh-blink {
-      50% { opacity: 0; }
+      50% {
+        opacity: 0;
+      }
     }
 
     /* Password Section */
@@ -92,15 +103,18 @@
       flex-direction: column;
       align-items: center;
       gap: 14px;
+      width: 100%;
     }
 
-    #passwordArea.visible { opacity: 1; }
+    #passwordArea.visible {
+      opacity: 1;
+    }
 
     .pass-toggle {
       background: transparent;
       border: 1px solid rgba(51, 255, 51, 0.75);
       color: var(--text-color);
-      padding: 8px 16px;
+      padding: 10px 20px;
       font-family: inherit;
       cursor: pointer;
       font-size: 14px;
@@ -108,6 +122,8 @@
       transition: all 0.2s ease;
       text-transform: uppercase;
       text-shadow: 0 0 8px var(--glow-color);
+      width: 100%;
+      max-width: 240px;
     }
 
     .pass-toggle:hover {
@@ -117,16 +133,20 @@
     }
 
     .input-wrap {
-      height: 0;
+      max-height: 0;
       overflow: hidden;
-      transition: height 0.35s ease-out, opacity 0.25s ease;
+      transition: max-height 0.35s ease-out, opacity 0.25s ease;
       display: flex;
-      gap: 10px;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
       opacity: 0;
+      width: 100%;
     }
 
     .input-wrap.open {
-      height: 40px;
+      max-height: 200px;
+      padding-bottom: 20px;
       opacity: 1;
     }
 
@@ -134,10 +154,12 @@
       background: rgba(51, 255, 51, 0.06);
       border: 1px solid rgba(51, 255, 51, 0.35);
       color: var(--text-color);
-      padding: 6px 12px;
+      padding: 10px 12px;
       font-family: inherit;
       outline: none;
-      width: 160px;
+      width: 100%;
+      max-width: 200px;
+      text-align: center;
       text-shadow: 0 0 8px var(--glow-color);
     }
 
@@ -153,10 +175,13 @@
       transition: all 0.7s cubic-bezier(0.4, 0, 0.2, 1);
       display: none;
       flex-direction: column;
-      gap: 10px;
+      gap: 12px;
       margin-top: 18px;
       padding: 18px 20px;
-      border-left: 1px solid rgba(51, 255, 51, 0.25);
+      border-left: 2px solid rgba(51, 255, 51, 0.25);
+      width: 100%;
+      max-width: 320px;
+      box-sizing: border-box;
     }
 
     #navColumn.revealed {
@@ -169,14 +194,17 @@
       color: var(--text-color);
       text-decoration: none;
       font-size: 16px;
-      padding: 4px 12px;
+      padding: 8px 12px;
       transition: all 0.2s ease;
       opacity: 0.8;
       text-shadow: 0 0 8px var(--glow-color);
+      border: 1px solid transparent;
     }
 
     .nav-link:hover {
       opacity: 1;
+      background: rgba(51, 255, 51, 0.05);
+      border-color: rgba(51, 255, 51, 0.2);
       padding-left: 18px;
       text-shadow: 0 0 12px var(--glow-color);
     }
@@ -187,7 +215,30 @@
       transition: opacity 0.2s ease;
     }
 
-    .nav-link:hover::before { opacity: 1; }
+    .nav-link:hover::before {
+      opacity: 1;
+    }
+
+    /* Desktop Specific adjustments */
+    @media (min-width: 600px) {
+      .input-wrap {
+        flex-direction: row;
+        justify-content: center;
+      }
+
+      .input-wrap.open {
+        max-height: 40px;
+        padding-bottom: 0;
+      }
+
+      .pass-toggle {
+        width: auto;
+      }
+
+      input[type="password"] {
+        text-align: left;
+      }
+    }
   </style>
 </head>
 
@@ -271,4 +322,5 @@
     })();
   </script>
 </body>
+
 </html>
