Add link to Stream Forecaster in navigation

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 
     <nav id="navColumn">
       <a href="/irr-calculator/" class="nav-link">IRR Calculator</a>
+      <a href="/stream-forecaster/" class="nav-link">Stream Forecaster (BETA)</a>
       <a href="/luminate/" class="nav-link">Luminate Analysis</a>
       <a href="/stock/" class="nav-link">Stock Mgmt</a>
       <a href="/physical-forecast/" class="nav-link">Physical Forecast</a>
