Update title to include '(BETA)'

--- a/stream-forecaster/index.html
+++ b/stream-forecaster/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <h1>Stream Forecaster</h1>
+        <h1>Stream Forecaster (BETA)</h1>
         <div class="chart-container">
             <canvas id="forecastChart"></canvas>
             <canvas id="overlayCanvas"></canvas>
