Update Physical Forecast link to indicate BETA

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <a href="/stream-forecaster/" class="nav-link">Stream Forecaster (BETA)</a>
       <a href="/luminate/" class="nav-link">Luminate Analysis</a>
       <a href="/stock/" class="nav-link">Stock Mgmt</a>
-      <a href="/physical-forecast/" class="nav-link">Physical Forecast</a>
+      <a href="/physical-forecast/" class="nav-link">Physical Forecast (BETA)</a>
       <a href="/eisenhower/" class="nav-link">Eisenhower Matrix</a>
     </nav>
   </div>
