Fix link text from 'Physical Forecast' to 'Physical Forecaster'

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <a href="/stock/" class="nav-link">Stock Mgmt</a>
       <a href="/eisenhower/" class="nav-link">Eisenhower Matrix</a>
       <a href="/stream-forecaster/" class="nav-link">Stream Forecaster (BETA)</a>
-      <a href="/physical-forecast/" class="nav-link">Physical Forecast (BETA)</a>
+      <a href="/physical-forecast/" class="nav-link">Physical Forecaster (BETA)</a>
     </nav>
   </div>
 
