Update IRR Calculator link in navigation

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
 
     <nav id="navColumn">
-      <a href="/irr-calculator/" class="nav-link">IRR Calculator</a>
+      <a href="/irr/" class="nav-link">IRR Calculator</a>
       <a href="/luminate/" class="nav-link">Luminate Analysis</a>
       <a href="/stock/" class="nav-link">Stock Mgmt</a>
       <a href="/eisenhower/" class="nav-link">Eisenhower Matrix</a>
