--- a/stencil/index.html
+++ b/stencil/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -8,18 +9,22 @@
     <title>Letter Practice</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="controls">
+            <button id="newWordBtn" class="new-word-button">New Word</button>
+            <div class="word-display" id="wordDisplay"></div>
             <button id="clearBtn" class="clear-button">Clear</button>
             <div class="level-indicator">Level: Beginner</div>
         </div>
-        
+
         <div class="canvas-wrapper">
             <canvas id="drawingCanvas"></canvas>
         </div>
     </div>
-    
+
     <script src="app.js"></script>
 </body>
+
 </html>
