--- a/stencil/index.html
+++ b/stencil/index.html
@@ -29,6 +29,16 @@
         </div>
     </div>
 
+    <!-- Victory Modal -->
+    <div id="victoryModal" class="modal hidden">
+        <div class="modal-content">
+            <h2>🎉 Fantastic! 🎉</h2>
+            <p id="victoryMessage">You completed the level in 0:00.</p>
+            <p>Keep going, and think about trying a harder level!</p>
+            <button id="playAgainBtn">Play Again</button>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
