--- a/stencil/index.html
+++ b/stencil/index.html
@@ -14,6 +14,15 @@
     <div class="container">
         <div class="controls">
             <div class="settings-group">
+                <label>Level:
+                    <select id="levelInput">
+                        <option value="level1">1 (Easy)</option>
+                        <option value="level2" selected>2 (Med)</option>
+                        <option value="level3">3 (Hard)</option>
+                        <option value="level4">4 (Expert)</option>
+                        <option value="all">Mix</option>
+                    </select>
+                </label>
                 <label>Words: <input type="number" id="wprInput" value="3" min="1" max="50"></label>
                 <label>Rounds: <input type="number" id="rtwInput" value="3" min="1" max="50"></label>
             </div>
