--- a/cuco/index.html
+++ b/cuco/index.html
@@ -246,15 +246,27 @@
             color: #fff;
         }
 
+        .table-container {
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+            margin: 0 -24px;
+            padding: 0 24px;
+        }
+
         @media (max-width: 768px) {
             .container {
-                padding: 30px 20px;
+                padding: 30px 15px;
             }
 
             header {
                 flex-direction: column-reverse;
                 align-items: flex-start;
                 gap: 20px;
+                margin-bottom: 30px;
+            }
+
+            .header-content h1 {
+                font-size: 1.8rem;
             }
 
             .logo-container img {
@@ -263,6 +275,25 @@
 
             .grid {
                 grid-template-columns: 1fr;
+                gap: 16px;
+            }
+
+            .card {
+                padding: 20px;
+            }
+
+            .table-container {
+                margin: 0 -20px;
+                padding: 0 20px;
+            }
+
+            table {
+                font-size: 0.75rem;
+                min-width: 500px;
+            }
+
+            .stat-value {
+                font-size: 1.5rem;
             }
         }
 
@@ -388,20 +419,22 @@
 
         <div class="section-title">Valuation Sensitivity Baseline</div>
         <div class="card" style="padding: 0; overflow: hidden; margin-bottom: 40px;">
-            <table class="matrix-table">
-                <thead>
-                    <tr>
-                        <th class="multiple-cell">Multiple</th>
-                        <th>LTM Gross ($961k)</th>
-                        <th>LTM Net ($890k)</th>
-                        <th>ATD Gross ($1.03M)</th>
-                        <th class="highlight-cell">ATD Net ($911k)</th>
-                    </tr>
-                </thead>
-                <tbody id="matrixBody">
-                    <!-- Injected via JS -->
-                </tbody>
-            </table>
+            <div class="table-container">
+                <table class="matrix-table">
+                    <thead>
+                        <tr>
+                            <th class="multiple-cell">Multiple</th>
+                            <th>LTM Gross ($961k)</th>
+                            <th>LTM Net ($890k)</th>
+                            <th>ATD Gross ($1.03M)</th>
+                            <th class="highlight-cell">ATD Net ($911k)</th>
+                        </tr>
+                    </thead>
+                    <tbody id="matrixBody">
+                        <!-- Injected via JS -->
+                    </tbody>
+                </table>
+            </div>
             <p style="padding: 12px; font-size: 0.7rem; color: var(--text-dim); border-top: 1px solid var(--border);">
                 *ATD: Adjusted Three-Year Annual Average (Removing one month from the 37-month measurement period for a
                 pure 36-month baseline).
@@ -481,20 +514,22 @@
         <div class="section-title">Asset Class Decomposition</div>
         <div class="card">
             <h2>Top 10 Track Contribution</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Track Title</th>
-                        <th>Annual Net (LTM)</th>
-                        <th>Share %</th>
-                        <th>Volatility (CV)</th>
-                        <th>Rating</th>
-                    </tr>
-                </thead>
-                <tbody id="trackTableBody">
-                    <!-- Injected via JS -->
-                </tbody>
-            </table>
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Track Title</th>
+                            <th>Annual Net (LTM)</th>
+                            <th>Share %</th>
+                            <th>Volatility (CV)</th>
+                            <th>Rating</th>
+                        </tr>
+                    </thead>
+                    <tbody id="trackTableBody">
+                        <!-- Injected via JS -->
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <div class="section-title">Strategic Factors</div>
